# trait_cast_rs

./: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  README.adoc  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml  rust_daily_nightly_check.yml  rust_main.yml  rust_release.yml  rust_validation.yml
examples/: README.md  basics.rs  manual.rs  manual_generic_struct.rs  with_decl_macro.rs  with_decl_macro_generic_struct.rs  with_decl_macro_struct.rs  with_proc_macro.rs  with_proc_macro_enum.rs  with_proc_macro_generic_target.rs  with_proc_macro_mut.rs
macros/: Cargo.toml  README.md
macros/src/: cargo_manifest.rs  lib.rs
src/: lib.rs  test.rs  trait_cast.rs  trait_cast_rs.rs
tests/remapped_dependency_test/: Cargo.toml
tests/remapped_dependency_test/src/: main.rs
trait_cast_impl_rs/: Cargo.toml  README.adoc  README.md
trait_cast_impl_rs/src/: lib.rs
trait_cast_rs/: Cargo.toml  README.adoc  README.md
trait_cast_rs/examples/: README.md  downcast_from_any.rs  manual.rs  manual_gen_struct.rs  manual_generic_struct.rs  raw.rs  with_decl_macro.rs  with_decl_macro_gen.rs  with_decl_macro_gen_struct.rs  with_decl_macro_generic_struct.rs  with_decl_macro_struct.rs  with_proc_macro.rs  with_proc_macro_enum.rs  with_proc_macro_gen.rs  with_proc_macro_generic_target.rs  with_proc_macro_mut.rs
trait_cast_rs/src/: decl.rs  decl_macro.rs  lib.rs  test.rs  trait_cast.rs
