cargo-features = ["edition2024"]

[package]
name = "trait-cast-macros"
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Proc-macro implementation for the 'trait-cast' crate."
homepage = "https://github.com/ink-feather-org/trait-cast-rs"
repository = "https://github.com/ink-feather-org/trait-cast-rs"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast", "rtti"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "2.0", default-features = false, features = [
  "full",
  "parsing",
  "printing",
  "proc-macro",
] }
quote = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
