[package]
name = "trait_cast_impl_rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
downcast_unchecked = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "1.0.99", features = ["full", "fold", "extra-traits"] }
quote = "1.0.21"
