[package]
name = "trait_cast_impl_rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "raldone01 <raldone01@gmail.com>",
  "onestacked <chrisi.schrefl@gmail.com>",
]
description = "Proc-macro implementation for the 'trait_cast_rs' crate."
homepage = "https://github.com/raldone01/trait_cast_rs"
repository = "https://github.com/raldone01/trait_cast_rs"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast", "rtti"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
venial = "0.4.0"
quote = "1.0.21"
