[package]
name = "trait_cast_impl_rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "raldone01 <raldone01@gmail.com>",
  "onestacked <chrisi.schrefl@gmail.com>",
]
description = "Proc-macro implementation for the 'trait_cast_rs' crate."
homepage = "https://github.com/raldone01/trait_cast_rs"
repository = "https://github.com/raldone01/trait_cast_rs"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast", "rtti"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "2.0", default-features = false, features = [
  "full",
  "parsing",
  "printing",
  "proc-macro",
] }
quote = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
