[package]
name = "trait_cast_rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "raldone01 <raldone01@gmail.com>",
  "onestacked <chrisi.schrefl@gmail.com>",
]
description = "Get your own Any with support for casting to trait objects."
homepage = "https://github.com/raldone01/trait_cast_rs"
repository = "https://github.com/raldone01/trait_cast_rs"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast", "rtti"]

[features]
default = ["alloc"]
downcast_unchecked = []
alloc = []
min_specialization = []
const_cmp_type_id = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait_cast_impl_rs = { path = "../trait_cast_impl_rs", version = "0.2.0" }
