[package]
name = "trait_cast_rs"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "raldone01 <raldone01@gmail.com>",
  "onestacked <chrisi.schrefl@gmail.com>",
]
description = "Get your own Any with support for casting to trait objects."
homepage = "https://github.com/ink-feather-org/trait_cast_rs"
repository = "https://github.com/ink-feather-org/trait_cast_rs"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast", "rtti"]

[features]
default = ["alloc"]
downcast_unchecked = []
alloc = []
min_specialization = []
const_sort = ["dep:const_sort_rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait_cast_impl_rs = { path = "../trait_cast_impl_rs" }
const_sort_rs = { version = "0.3", optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
