[package]
name = "trait_cast_rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "raldone01 <raldone01@gmail.com>",
  "onestacked <chrisi.schrefl@gmail.com>",
]
description = "Get your own Any with support for casting to trait objects."
homepage = "https://github.com/ink-feather-org/trait_cast_rs"
repository = "https://github.com/ink-feather-org/trait_cast_rs"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast", "rtti"]

[features]
default = ["alloc"]
downcast_unchecked = []
alloc = []
min_specialization = []

[dependencies]
trait_cast_impl_rs = { path = "../trait_cast_impl_rs", version = "0.3.0" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
